--- a/fourth.html
+++ b/fourth.html
@@ -3,7 +3,7 @@
 <head>
   <title>Советы</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <link rel="stylesheet" href="./css/drftgyhjkl;.css">
+  <link rel="stylesheet" href="./drftgyhjkl;.css">
 </head>
 <!-- ТРЕТЬЯ СТРАНИЦА -->
 <body>
