--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Бася</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <link rel="stylesheet" href="./css/drftgyhjkl;.css">
+  <link rel="stylesheet" href="./drftgyhjkl;.css">
 </head>
 <!-- ПЕРВАЯ СТРАНИЦА -->
 <body>
